[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flask_guardian"
version = "0.1.1"
authors = [
  { name="Antonin Alves", email="antonin@alors-la.center" },
]
description = "A small flask package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/antonin-alves/Flask-Guardian"
"Bug Tracker" = "https://github.com/antonin-alves/Flask-Guardian/issues"
